objects/G2Crowd__G2_Asset__c.object
<CustomObject>
    <fields>
        <fullName>G2Crowd__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Expires_At__c</fullName>
        <label>Expires At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>G2Crowd__G2_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>G2 Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>G2Crowd__G2_ID__c</fullName>
        <label>G2 ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__G2_Product__c</fullName>
        <label>G2 Product</label>
        <referenceTo>G2Crowd__G2_Product__c</referenceTo>
        <relationshipLabel>G2 Assets</relationshipLabel>
        <relationshipName>G2_Assets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>G2Crowd__G2_Unique_Identifier__c</fullName>
        <externalId>true</externalId>
        <label>G2_Unique_Identifier</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>G2Crowd__G2_Updated_At__c</fullName>
        <label>G2 Updated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Notice__c</fullName>
        <label>Notice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TopTen</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>G2Crowd__URL__c</fullName>
        <label>URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>G2 Asset</label>
    <listViews>
        <fullName>G2Crowd__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>G2 Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>G2 Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>